# JobAgent

./: .env.example  .gitignore  Makefile  PROJECT_ROADMAP.md  README.md  SPRINT_1_IMPLEMENTATION.md  SYSTEM_BLUEPRINT.md  TECH_DEBT.md  docker-compose.yml  mypy.ini  pyproject.toml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_job_discovery_schema.py  003_timezone_timestamps.py
backend/app/: __init__.py  main.py
backend/app/application/: __init__.py  commands.py  dto.py  handlers.py  queries.py  scoring.py  services.py
backend/app/core/: config.py  correlation.py  logging.py  metrics.py
backend/app/domain/: __init__.py  entities.py  exceptions.py  interfaces.py  value_objects.py
backend/app/infrastructure/: browser_client.py  database.py  llm_client.py
backend/app/infrastructure/config/: watcher.py  yaml_loader.py
backend/app/infrastructure/database/: models.py  unit_of_work.py
backend/app/infrastructure/providers/: dependencies.py
backend/app/infrastructure/providers/job/: __init__.py  greenhouse.py  lever.py  mock_providers.py
backend/app/infrastructure/redis/: event_bus.py
backend/app/infrastructure/repositories/: application.py  base.py  candidate.py  job.py  resume.py
backend/app/presentation/: routes.py
backend/tests/: conftest.py
config/: answers.template.yaml  answers.yaml  companies.yaml  credentials.template.yaml  models.yaml  preferences.yaml  profile.template.yaml  profile.yaml  secrets.template.yaml
docs/: CHANGELOG.md
(+15 files in other folders)
